@@ -34,11 +34,12 @@ requires 'Wikibase::Datatype::Property' => 0;
 requires 'Wikibase::Datatype::Reference' => 0;
 requires 'Wikibase::Datatype::Sense' => 0;
 requires 'Wikibase::Datatype::Sitelink' => 0;
-requires 'Wikibase::Datatype::Snak' => 0;
+requires 'Wikibase::Datatype::Snak' => 0.32;
 requires 'Wikibase::Datatype::Statement' => 0;
 requires 'Wikibase::Datatype::Value' => 0.29;
 requires 'Wikibase::Datatype::Value::Globecoordinate' => 0;
 requires 'Wikibase::Datatype::Value::Item' => 0;
+requires 'Wikibase::Datatype::Value::Lexeme' => 0;
 requires 'Wikibase::Datatype::Value::Monolingual' => 0;
 requires 'Wikibase::Datatype::Value::Property' => 0;
 requires 'Wikibase::Datatype::Value::Quantity' => 0;
@@ -63,10 +64,11 @@ test_requires 'Wikibase::Datatype::MediainfoStatement' => 0;
 test_requires 'Wikibase::Datatype::Property' => 0.25;
 test_requires 'Wikibase::Datatype::Reference' => 0;
 test_requires 'Wikibase::Datatype::Sitelink' => 0;
-test_requires 'Wikibase::Datatype::Snak' => 0;
+test_requires 'Wikibase::Datatype::Snak' => 0.32;
 test_requires 'Wikibase::Datatype::Statement' => 0;
 test_requires 'Wikibase::Datatype::Value::Globecoordinate' => 0;
 test_requires 'Wikibase::Datatype::Value::Item' => 0;
+test_requires 'Wikibase::Datatype::Value::Lexeme' => 0;
 test_requires 'Wikibase::Datatype::Value::Monolingual' => 0;
 test_requires 'Wikibase::Datatype::Value::Property' => 0;
 test_requires 'Wikibase::Datatype::Value::Quantity' => 0;
