@@ -1,4 +1,5 @@
 0.12
+ - Add Value::Lexeme.
 
 0.11 2023-04-24T18:45:00+02:00
  - Fix dependency to Wikibase::Datatype::Value::Sense.
